<resources>
    <string name="app_name">PickMeUp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_email_username">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="welcome">"Welcome "</string> <!-- format is welcome string + username + "!" -->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >=8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Admin_UserName">admin</string>
    <string name="Admin_Password">password</string>
    <string name="action_sign_up">sign up</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_activity_bottom_home_screen">BottomHomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_sign_up">SignUp</string>

    <string name="title_activity_maps_test">Map</string>
    <string-array name="states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <string-array name="sports_list">
        <item>Basketball</item>
        <item>Football</item>
        <item>Frisbee</item>
        <item>Soccer</item>
        <item>Tennis</item>
        <item>Baseball</item>
    </string-array>

    <string-array name="team_sizes">
        <item>1v1</item>
        <item>2v2</item>
        <item>3v3</item>
        <item>4v4</item>
        <item>5v5</item>
    </string-array>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="basketball_tips">Basketball Tips</string>
    <string name="news">News</string>
    <string name="store">Store</string>
    <string name="go_back">go back</string>
    <string name="passing_drills">Passing drills</string>
    <string name="shooting_drills">Shooting Drills</string>
    <string name="read_espn">Read Espn</string>
    <string name="read_nba_com">Read Nba.com</string>
    <string name="shop_nike">Shop Nike</string>
    <string name="shop_adidas">Shop Adidas</string>
    <string name="title_activity_add_new_court_screen">AddNewCourtScreen</string>
    <string name="title_activity_in_depth_game_screen">InDepthGameScreen</string>
    <string name="title_activity_location_games_screen">LocationGamesScreen</string>
    <string name="title_activity_guest_screen">GuestScreen</string>
    <string name="title_activity_messages_screen">MessagesScreen</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_addresses">AddressesActivity</string>
    <string name="title_activity_add_address">AddAddressActivity</string>
    <string name="title_activity_add_new_game_screen">AddNewGameScreen</string>
</resources>
