<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tabs.storeTab">

    <Button
        android:id="@+id/ghomebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/shopnbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_nike"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ghomebtn"
        app:layout_constraintVertical_bias="0.17000002" />

    <Button
        android:id="@+id/shopadbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_adidas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopnbtn"
        app:layout_constraintVertical_bias="0.285" />
</androidx.constraintlayout.widget.ConstraintLayout>